archive/nginx-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: web-test
    hajimari.io/icon: web
spec:
  ingressClassName: nginx-test
  rules:
    - host: &host web-test.kleinsorge.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-test
                port:
                  number: 80
  tls:
    - secretName: nginx-test-tls-certificate
      hosts:
        - *host
